feat: Account form

--- a/accountform.html
+++ b/accountform.html
@@ -96,10 +96,10 @@
         <li>
             <h3>Religion</h3>
 
-            <label for="Islam">religion</label>
+            <label for="Islam">Islam</label>
             <input type="radio" name="Status" id="Islam">
 
-            <label for="Christian">religion</label>
+            <label for="Christian">Christian</label>
             <input type="radio" name="Status" id="Christian">
         </li>
         <li>
@@ -125,20 +125,19 @@
         </li>
         <li>
             <h3>Means of Identification</h3>
-            <label for="bvn">BVN</label>
-            <input type="file" name="bvn" id="bvn">
+            <input type="radio" name="id" id="nin" >
+            <label for="nin">NIN</label>
 
-            <label for="NIN">National Identity</label>
-            <input type="file" name="NIN" id="NIN">
+            <input type="radio" name="id" id="passport">
+            <label for="passport">Passport</label>
 
-            <label for="driverslicense">Driver's license</label>
-            <input type="file" name="Drivers license" id="driverslicense">
+            <input type="radio" name="id" id="votersCard">
+            <label for="votersCard">divorced</label>
+
+            <input type="file" name="file" id="file">
         </li>
        </ul>
-       
-     
-     <label for="input">input</label>
-     <input type="text">
+       <input type="submit">
     </fieldset>
     </form>
 
