feat: Account form

--- a/inline.html
+++ b/inline.html
@@ -17,7 +17,7 @@
 
 
     <h1>Inline element</h1>
-    <p>computre have a <strong>software</strong>part and a hardware</p>
+    <p>computer have a <strong>software</strong>part and a hardware</p>
 
     <p>I passed a guy eating and he said <em>Bon <strong>appettie</strong> </em></p>
 
