--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./accountform.html" target="_blank">accountform</a>
+    <a href="./accountform.html" target="_blank">Accountform</a>
     <a href="./letter.html">Letter</a>
     <figure>
 <img src="./I6.jpg" alt="Spongbob" title="Mubby" width="300" height="300">
