--- a/accountform.html
+++ b/accountform.html
@@ -131,7 +131,7 @@
             <label for="passport">Passport</label>
 
             <input type="radio" name="id" id="votersCard">
-            <label for="votersCard">divorced</label>
+            <label for="votersCard">Divorced</label>
 
             <input type="file" name="file" id="file" img="png">
         </li>
