--- a/accountform.html
+++ b/accountform.html
@@ -14,7 +14,7 @@
        <legend>Personal information</legend>
        <ul>
         <li>
-            <label for="fullName">full name:</label>
+            <label for="fullName">Full name:</label>
             <input type="text" name="name" id="fullName" placeholder="Surname first" required>
         </li>
         <li>
