--- a/accountform.html
+++ b/accountform.html
@@ -118,8 +118,8 @@
         </li> <br>
         <li>
             <label for="Email">Email:</label>
-            <input type="email" name="email" id="Email" placeholder="abcde@gmail.com"><br>
-        </li>
+            <input type="email" name="email" id="Email" placeholder="abcde@gmail.com">
+        </li><br>
         <li>
             <label for="Telephone">Tel:</label>
             <input type="tel" name="tel" id="Telephone" placeholder="+234">
